--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "dependencies": {
     "express": "^4.14.0",
     "extend": "^3.0.0",
-    "forever": "^0.15.3",
-    "gulp": "^3.9.1",
     "moment": "^2.18.1",
     "request": "^2.73.0",
     "socket.io": "^1.4.8"
@@ -33,8 +31,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "forever start server.js",
-    "stop": "forever stop server.js"
+    "start": "node server.js",
+    "build": "gulp"
   },
   "keywords": [
     "express",
